--- a/templates/services.yaml
+++ b/templates/services.yaml
@@ -11,6 +11,7 @@ spec:
   selector:
     app: {{ .Release.Name }}-sequin
 ---
+{{- if .Values.postgres.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -22,7 +23,9 @@ spec:
       targetPort: 5432
   selector:
     app: {{ .Release.Name }}-postgres
+{{- end -}}
 ---
+{{- if .Values.redis.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -34,3 +37,4 @@ spec:
       targetPort: 6379
   selector:
     app: {{ .Release.Name }}-redis
+{{- end -}}
