--- a/templates/persistent-volume-claims.yaml
+++ b/templates/persistent-volume-claims.yaml
@@ -1,3 +1,5 @@
+{{- if .Values.postgres.enabled -}}
+{{- if .Values.postgres.persistence.enabled -}}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -9,7 +11,11 @@ spec:
   resources:
     requests:
       storage: {{ .Values.postgres.persistence.size }}
+{{- end }}
+{{- end }}
 ---
+{{- if .Values.redis.enabled }}
+{{- if .Values.redis.persistence.enabled }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -21,3 +27,5 @@ spec:
   resources:
     requests:
       storage: {{ .Values.redis.persistence.size }}
+{{- end }}
+{{- end }}
