--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: sequin-standalone
-description: Helm chart for Sequin with optional PostgreSQL and Redis
-version: 0.0.1
+description: Helm chart for Sequin with optional PostgreSQL, Redis and ingress
+version: 0.0.2
 type: application
 
