--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -1,5 +1,6 @@
 {{- if .Values.ingress.enabled -}}
 {{- $svcPort := .Values.sequin.service.port -}}
+{{- $svcName := .Release.Name -}}
 {{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
   {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
   {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
@@ -14,7 +15,7 @@ apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
-  name: {{ .Release.Name }}-ingress
+  name: {{ $svcName }}-ingress
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
@@ -46,11 +47,11 @@ spec:
             backend:
               {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
-                name: {{ .Release.Name }}-sequin
+                name: {{ $svcName }}-sequin
                 port:
                   number: {{ $svcPort }}
               {{- else }}
-              serviceName: {{ .Release.Name }}-sequin
+              serviceName: {{ $svcName }}-sequin
               servicePort: {{ $svcPort }}
               {{- end }}
           {{- end }}
