--- a/templates/persistent-volume-claims.yaml
+++ b/templates/persistent-volume-claims.yaml
@@ -14,8 +14,8 @@ spec:
 {{- end }}
 {{- end }}
 ---
-{{- if .Values.redis.enabled }}
-{{- if .Values.redis.persistence.enabled }}
+{{- if .Values.redis.enabled -}}
+{{- if .Values.redis.persistence.enabled -}}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
