--- a/templates/postgres-deployment.yaml
+++ b/templates/postgres-deployment.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.postgres.enabled -}}
+{{ if .Values.postgres.enabled -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -36,4 +36,4 @@ spec:
         - name: postgres-data
           persistentVolumeClaim:
             claimName: {{ .Release.Name }}-postgres-pvc
-{{- end -}}
+{{- end }}
