--- a/templates/services.yaml
+++ b/templates/services.yaml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Release.Name }}-sequin
+  {{- with .Values.sequin.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   type: {{ .Values.sequin.service.type }}
   ports:
